# traco-data-dictionary

./: .gitignore  AUTO_RESIZE_COLUMNS_IMPLEMENTATION.md  COLUMN_RESIZING_IMPLEMENTATION.md  DEPLOYMENT.md  GRID_MIGRATION_SUMMARY.md  MODERNIZATION_SUMMARY.md  PAGINATION_EVENT_FIX.md  PROJECT_SUMMARY.md  README.md  SINGLE_SPA_FIXES_SUMMARY.md  WX_GRID_ERROR_RESOLUTION.md  build.sh  examples.sh  index.py  models.py  parser.py  parser_new.py  pyproject.toml  requirements.txt  run_dev.py  test-ui.html  test_api.py  test_fixz_api.py  vercel_app.py  vercel_main.py
.github/workflows/: deploy.yml
api/: index.py  main.py  main_new.py  main_old.py
api/static/: single-spa-entry.js  test-ui.html
api_vercel/: index.py
public/: single-spa-entry.js  ui-styles.css
resources/dict/FIX.Z/Base/: Abbreviations.xml  Categories.xml  Components.xml  Datatypes.xml  Enums.xml  Fields.xml  Messages.xml  MsgContents.xml  Sections.xml
resources/prompts/: Create.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
ui/src/: App.svelte  main.ts
ui/src/components/: AbbreviationList.svelte  AgGrid.svelte  CategoryList.svelte  ComponentList.svelte  ComponentList_new.svelte  ComponentList_old.svelte  DatatypeList.svelte  EnumList.svelte  FieldList.svelte  FieldList_old.svelte  MessageList.svelte  MessageListTest.svelte  MessageList_old.svelte  MsgContentList.svelte  MsgFormList.svelte  SearchComponent.svelte  SectionList.svelte  VersionSelector.svelte
